tooling/nargo_cli/tests/snapshots/compile_failure/comptime_var_not_defined/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: cannot find `foo` in this scope
  ┌─ src/main.nr:3:9
  │
3 │         foo();
  │         --- not found in this scope
  │

error: Variable not in scope
  ┌─ src/main.nr:3:9
  │
3 │         foo();
  │         --- Could not find variable
  │

Aborting due to 2 previous errors
